objects/Book_Product__c.object
<CustomObject><fields>
        <fullName>Book_Project__c</fullName>
        <label>Book Project</label>
        <referenceTo>Book_Project__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Book_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Product_Code__c</fullName>
        <description>Pulls the product code form the product to the junction record</description>
        <formula>Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Product_Unique_Identifier__c</fullName>
        <description>Pulls the product unique identifier from the product to the junction record</description>
        <formula>Product__r.Product_Unique_Identifier__c</formula>
        <label>Product Unique Identifier</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>This is filtered to return only active products</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Book Projects</relationshipLabel>
        <relationshipName>Book_Products</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Siebel_ID__c</fullName>
        <label>Siebel ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Book-Product</label><nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>Book-Product</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Book-Products</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>